paid/force-app/main/default/objects/Paid_Tax_Rate__c/Paid_Tax_Rate__c.object-meta.xml
<CustomObject>
    <label>Paid Tax Rate</label>
    <nameField>
        <label>Paid Tax Rate Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Paid Tax Rate</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>