paid/force-app/main/default/objects/Paid_Tax_Rate__c/fields/Paid_Address_Comparison__c.field-meta.xml
<CustomField>
    <fullName>Paid_Address_Comparison__c</fullName>
    <externalId>true</externalId>
    <label>Paid Address Comparison</label>
    <length>255</length>
    <type>Text</type>
</CustomField>