paid/force-app/main/default/objects/Paid_Tax_Rate__c/fields/Paid_City__c.field-meta.xml
<CustomField>
    <fullName>Paid_City__c</fullName>
    <label>Paid City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>