paid/force-app/main/default/objects/Paid_Tax_Rate__c/fields/Paid_Currency__c.field-meta.xml
<CustomField>
    <fullName>Paid_Currency__c</fullName>
    <label>Paid Currency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>