paid/force-app/main/default/objects/Paid_Tax_Rate__c/fields/Paid_Priority_Address_Comparison__c.field-meta.xml
<CustomField>
    <fullName>Paid_Priority_Address_Comparison__c</fullName>
    <label>Paid Priority Address Comparison</label>
    <length>255</length>
    <type>Text</type>
</CustomField>