paid/force-app/main/default/objects/Paid_Tax_Rate__c/fields/Paid_Rate__c.field-meta.xml
<CustomField>
    <fullName>Paid_Rate__c</fullName>
    <label>Paid Rate</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>