paid/force-app/main/default/objects/Paid_Tax_Rate__c/fields/Paid_State__c.field-meta.xml
<CustomField>
    <fullName>Paid_State__c</fullName>
    <label>Paid State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>