paid/force-app/main/default/objects/Paid_Tax_Rate__c/fields/Paid_Tax_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Paid_Tax_Identifier__c</fullName>
    <label>Paid Tax Identifier</label>
    <length>80</length>
    <type>Text</type>
</CustomField>