paid/force-app/main/default/objects/Paid_Tax_Rate__c/fields/Paid_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Paid_Zip_Code__c</fullName>
    <label>Paid Zip Code</label>
    <length>15</length>
    <type>Text</type>
</CustomField>